--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -81,46 +81,56 @@
 
         <p id="title_left"><b> Donghua University </b></p>
         <p id="title_right"><b> Shanghai, China </b></p>
-        <li><p id="left"> Bachelor of Management in Electronic Commerc </p>
+        <li><p id="left"> Bachelor of Management in Electronic Commerce </p>
         <p id="right"><i> Sep. 2010 - Jun. 2014 </i></p></li>
 
         <h1 id="section"> Experience</h1>
         <hr noshade>
+
+        <p id="title_left"><b> Shining Lab </b></p> 
+        <p id="title_right"><b> Shanghai, China </b></p> 
+        <p id="title_left"> Founder </p> 
+        <p id="title_right"><i> Aug. 2019 - Now </i></p>
+        <li> Directed the team to research on cutting edge innovation in AI. </li>
 
         <p id="title_left"><b> Learnable, Inc. </b></p>
         <p id="title_right"><b> Boston, USA </b></p>
         <p id="title_left"> Machine Learning Engineer </p>
         <p id="title_right"><i> Sep. 2018 - Now </i></p>
         <p id="title_left"> Machine Learning Engineer Intern</p>
-        <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
-        <li> Develop, evaluate, and improve solutions by machine learning and statistical modeling techniques </li>
-        <li> Follow the latest conferences, reproduce papers, and develop new methods to fulfill specific requirements </li>
-        <li> Supervise the NLP group and be in charge of several studies such as language modeling and semantic parsing </li>
-        <li> Work in an agile team to deliver features in a fast pace </li>
-        <li> Python, Tensorflow, PyTorch, Keras</li>
+        <p id="title_right"><i> Aug. 2018 - Sep. 2018 </i></p>
+        <li> Supervised the NLP team to define problems, conduct researches, and provide solutions. </li>
+        <li> Led several studies such as masked language modeling, semantic parsing, and text post-processing. </li>
+        <li> Followed the state-of-the-art and applied novel methods to fulfill specific production requirements. </li>
+
         <p id="title_left"><b> Pythagoras Investment Management LLC </b></p>
         <p id="title_right"><b> New York, USA </b></p>
         <p id="title_left"> Algorithm Engineer Intern </p>
         <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
-        <li> Develop and adopt best practices to design and build an automatic digital currency trading system </li>
-        <li> Collaborate with the team in developing a pipeline from scratch for data management </li>
-        <li> Manage over 10+ exchanges’ APIs </li>
-        <li> HTML, CSS, JavaScript, Python, SQL, Flask, MongoDB </li>
+        <li> Developed and adopted best practices to design and build an automatic digital currency trading system. </li>
+        <li> Collaborated with the team in developing a pipeline from scratch for data management. </li>
+        <li> Managed over 10+ exchanges’ APIs for quantitative trading strategies that changed at any time. </li>
+
         <p id="title_left"><b> China Net Cloud (Shanghai) Co., Ltd </b></p>
         <p id="title_right"><b> Shanghai, China </b></p>
         <p id="title_left"> Project Manager </p>
         <p id="title_right"><i> Jul. 2014 - Mar. 2016 </i></p>
         <p id="title_left"> Project Manager Intern</p>
         <p id="title_right"><i> Mar. 2014 - Jul. 2014 </i></p>
-        <li> Manage projects end to end and take ultimate responsibility for projects’ success </li>
-        <li> Handle business with AWS and Alibaba Could including purchasing servers, reviewing bills, and solving tickets </li>
-        <li> Support engineers to transfer information, design server architecture, and cooperate with clients </li>
-        <li> Optimize existing procedure and maintain corresponding wiki pages </li>
-        <li> Microsoft Office, SugarCRM, Zabbix, AWS, Alibaba Could, Trello, Draw.io, Wiki </li>
+        <li> Managed projects end to end and took ultimate responsibility for projects’ success. </li>
+        <li> Gathered requirements from stakeholders and end-users to determine suitable solutions to pre-defined goals. </li>
+        <li> Converted requirements to product prototypes into a clear product framework. </li> 
+        <li> Collaborated with developers to drive product development and took responsibility in product lifecycle management. </li>
+        <li> Maintained and optimized existing procedure and team training program. </li>
 
-        <h1 id="section"> Technical Projects</h1>
+        <h1 id="section"> Projects </h1>
         <hr noshade>
 
+        <p id="title_left"><b> Shining Lab </b> Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
+        <p id="title_right"><b> Jun. 2020 - Now </b></p>
+        <li> Collected, cleaned, and processed the LibriSpeech and IWSLT2012 ASR corpus for experiments. </li> 
+        <li> Researched on novel approaches to recurrently post-process the outputs of the ASR system. </li>
+        
         <p id="title_left"><b> Data Processing </b></p>
         <p id="title_right"><b> Learnable, Inc. </b></p>
         <p id="title_left"> 14 Million Question Bank Management </b></p>
