--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -126,11 +126,17 @@
         <h1 id="section"> Projects </h1>
         <hr noshade>
 
-        <p id="title_left"><b> Shining Lab </b> Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
+        <p id="title_left"><b> Shining Lab, </b> Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
         <p id="title_right"><b> Jun. 2020 - Now </b></p>
         <li> Collected, cleaned, and processed the LibriSpeech and IWSLT2012 ASR corpus for experiments. </li> 
         <li> Researched on novel approaches to recurrently post-process the outputs of the ASR system. </li>
         
+        <p id="title_left"><b> Shining Lab, </b> Recurrent Inference in Text Editing </p>
+        <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p>
+        <li> Proposed a novel method to edit text through a recurrent inference process. </li> 
+        <li> Introduced a suite of three controlled synthetic benchmark tasks. </li> 
+        <li> Conducted extensive experiments and showed significant gains over conventional inference methods. </li>
+
         <p id="title_left"><b> Data Processing </b></p>
         <p id="title_right"><b> Learnable, Inc. </b></p>
         <p id="title_left"> 14 Million Question Bank Management </b></p>
@@ -157,9 +163,6 @@
         <p id="title_right"><b> Pythagoras Investment Management LLC </b></p>
         <p id="title_left"> Pythagoras Digital Funds Trading Systems Development </b></p>
         <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
-
-        <h1 id="section"> Academic Projects</h1>
-        <hr noshade>
 
         <p id="title_left"><b> Dissertation </b></p>
         <p id="title_right"><b> New York University </b></p>
