--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -126,58 +126,49 @@
         <h1 id="section"> Projects </h1>
         <hr noshade>
 
-        <p id="title_left"><b> Shining Lab, </b> Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
+        <p id="title_left"><b> Shining Lab </b>, Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
         <p id="title_right"><b> Jun. 2020 - Now </b></p>
         <li> Collected, cleaned, and processed the LibriSpeech and IWSLT2012 ASR corpus for experiments. </li> 
         <li> Researched on novel approaches to recurrently post-process the outputs of the ASR system. </li>
         
-        <p id="title_left"><b> Shining Lab, </b> Recurrent Inference in Text Editing </p>
+        <p id="title_left"><b> Shining Lab </b>, Recurrent Inference in Text Editing </p>
         <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p>
         <li> Proposed a novel method to edit text through a recurrent inference process. </li> 
         <li> Introduced a suite of three controlled synthetic benchmark tasks. </li> 
         <li> Conducted extensive experiments and showed significant gains over conventional inference methods. </li>
 
-        <p id="title_left"><b> Data Processing </b></p>
-        <p id="title_right"><b> Learnable, Inc. </b></p>
-        <p id="title_left"> 14 Million Question Bank Management </b></p>
-        <p id="title_right"><i> Jan. 2019 - May. 2019 </i></p>
+        <p id="title_left"><b> Learnable, Inc. </b>, Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </p>
+        <p id="title_right"><b> Jun, 2019 - Nov, 2019 </b></p>
+        <li> Cleaned, tokenized, and managed math corpus from HTML-embeded raw data. </li> 
+        <li> Applied and improved masked language modeling (e.g., BERT) for universal use of pre-trained representation. </li> 
+        <li> Maintained the training environment and computing resources. </li> 
 
-        <p id="title_left"><b> Textual Classification </b></p>
-        <p id="title_right"><b> Learnable, Inc. </b></p>
-        <p id="title_left"> High School Physics Questions Knowledge Points Tagging </b></p>
-        <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
+        <p id="title_left"><b> Learnable, Inc. </b>, Post-Processing for Deep Learning Based Optical Character Recognition </p>
+        <p id="title_right"><b> Apr, 2019 - Aug, 2019 </b></p>
+        <li> Analyzed OCR error patterns and built a simulator to generate data automatically. </li> 
+        <li> Researched on involving language understanding into a real-time OCR system. </li> 
+        <li> Established a pipeline from scratch with models (e.g., GRU, LSTM, Transformer) switching. </li> 
+        <li> Maintained both test and production environments, and embedded corrector into OCR system. </li> 
 
-        <p id="title_left"><b> Language Modeling </b></p>
-        <p id="title_right"><b> Learnable, Inc. </b></p>
-        <p id="title_left"> Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </b></p>
-        <p id="title_right"><i> Jun. 2019 - Nov. 2019 </i></p>
+        <p id="title_left"><b> Learnable, Inc. </b>, Knowledge Points Tagging for High School Exam Questions </p>
+        <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
+        <li> Developed SQL pipeline to manage the 14 Million Question Bank. </li> 
+        <li> Explored various multi-label classification approaches and proposed hierarchical inference. </li> 
 
-        <p id="title_left"><b> Sequential Learning </b></p>
-        <p id="title_right"><b> Learnable, Inc. </b></p>
-        <p id="title_left"> Post-Processing for Deep Learning Based Optical Character Recognition </b></p>
-        <p id="title_right"><i> Mar. 2019 - Now </i></p>
-        <p id="title_left"> Formal Language Parsing for Automatic Grading System </b></p>
-        <p id="title_right"><i> Feb. 2019 - Now </i></p>
+        <p id="title_left"><b> New York University </b>, The Relationship of Academic Capital and Mendeley Altmetrics </p>
+        <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
+        <li> Quantified the academic capital of an article’s author based on Elsevier research metrics. </li> 
+        <li> Examined relationships of academic capital features and Mendeley Readership. </li> 
+        <li> Reported the influence of the first authors’ citations on articles’ reader count. </li>
 
-        <p id="title_left"><b> Software Development </b></p>
-        <p id="title_right"><b> Pythagoras Investment Management LLC </b></p>
-        <p id="title_left"> Pythagoras Digital Funds Trading Systems Development </b></p>
-        <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
+        <p id="title_left"><b> Pythagoras Investment Management LLC </b>, Pythagoras Digital Funds Trading Systems </p>
+        <p id="title_right"><b> Dec. 2017 - May. 2018 </b></p>
 
-        <p id="title_left"><b> Dissertation </b></p>
-        <p id="title_right"><b> New York University </b></p>
-        <p id="title_left"> The Relationship of Academic Capital and Altmetrics </p>
-        <p id="title_right"><i> Sep. 2017 - Jul. 2018 </i></p>
+        <p id="title_left"><b> New York University </b>, AIChallenger English-Chinese Machine Translation </p>
+        <p id="title_right"><b> Sep. 2017 - May. 2018 </b></p> 
 
-        <p id="title_left"><b> AIChallenger </b></p>
-        <p id="title_right"><b> New York University </b></p>
-        <p id="title_left"> English-Chinese Machine Translation Task </p>
-        <p id="title_right"><i> Sep. 2017 - May. 2018 </i></p>
-
-        <p id="title_left"><b> HackNYU </b></p>
-        <p id="title_right"><b> New York University </b></p>
-        <p id="title_left"> Lung Cancer Detection Using Deep Learning </p>
-        <p id="title_right"><i> Mar. 2017 - Apr. 2017 </i></p>
+        <p id="title_left"><b> New York University </b>, HackNYU Lung Cancer Detection Using Deep Learning </p>
+        <p id="title_right"><b> Mar. 2017 - Apr. 2017 </b></p> 
 
         <h1 id="section"> Publications</h1>
         <hr noshade>
@@ -204,6 +195,7 @@
         <h1 id="section"> Services</h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
+        <p id="left"> DataKind DataDives Volunteer </p>
 
       </div>
     </div>
