update arXiv paper

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -90,7 +90,7 @@
         <p id="title_left"><b> Shining Lab </b></p> 
         <p id="title_right"><b> Shanghai, China </b></p> 
         <p id="title_left"> Founder </p> 
-        <p id="title_right"><i> Aug. 2019 - Now </i></p>
+        <p id="title_right"><i> Sep. 2019 - Now </i></p>
         <li> Directed the team to research on cutting edge innovation in AI. </li>
 
         <p id="title_left"><b> Learnable, Inc. </b></p>
@@ -173,7 +173,7 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
-        <p id="text"><b> Recurrent Inference in Text Editing </b></a>
+        <p id="text"><b> Recurrent Inference in Text Editing </b><a href="https://arxiv.org/abs/2009.12643">[arXiv]</a></p>
         <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
         <li> Findings of the Association for Computational Linguistics (ACL): Empirical Methods in Natural Language Processing (EMNLP) 2020. </li>
 
