--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -173,23 +173,21 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
-        <p id="text"><b> Recurrent Inference in Text Editing </b><a href="https://arxiv.org/abs/2009.12643">[arXiv]</a></p>
-        <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
+        <p id="text"><b> Recurrent Inference in Text Editing </b></p>
+        <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
         <li> Findings of the Association for Computational Linguistics (ACL): Empirical Methods in Natural Language Processing (EMNLP) 2020. </li>
 
-        <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b><a href="https://arxiv.org/abs/2003.06658">[arXiv]</a></p>
-        <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a> </li>
+        <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p>
+        <li><b>Ning Shi</b></a> </li>
         <li> Submitted. </li>
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
-        <li> <a href="https://www.linkedin.com/in/keran-zhao-65a2a07b/"> Keran Zhao</a>, <a href="https://www.linkedin.com/in/yingda-lu-b4749512/">Yingda Lu</a>, <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, <a href="https://yuhenghu.com/">Yuheng Hu</a> </li>
+        <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, Yuheng Hu </li>
         <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS), 2019.</li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
-        <li><b> Ning Shi </b></li>
-        <li> Advisors:
-        <a href="https://www.linkedin.com/in/farrazzak/"> Farid Razzak </a> and 
-        <a href="https://www.linkedin.com/in/thomas-christo-ph-d-3330922/"> Thomas Christo </a></li>
+        <li><b>Ning Shi</b></li>
+        <li> Advisors: Farid Razzak and Thomas Christo </li>
         <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University. </li>
 
         <h1 id="section"> Services</h1>
