--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -183,7 +183,7 @@
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
         <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, Yuheng Hu </li>
-        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS), 2019.</li>
+        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019.</li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li><b>Ning Shi</b></li>
