Update main page and cv

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -87,6 +87,12 @@
         <h1 id="section"> Experience</h1>
         <hr noshade>
 
+        <p id="title_left"><b> Alibaba Group </b></p> 
+        <p id="title_right"><b> Hangzhou, China </b></p> 
+        <p id="title_left"> Senior Algorithm Engineer </p> 
+        <p id="title_right"><i> Oct. 2020 - Now </i></p>
+        <li> Explored cool applications of NLP in Security. </li>
+
         <p id="title_left"><b> Shining Lab </b></p> 
         <p id="title_right"><b> Shanghai, China </b></p> 
         <p id="title_left"> Founder </p> 
@@ -96,7 +102,7 @@
         <p id="title_left"><b> Learnable, Inc. </b></p>
         <p id="title_right"><b> Boston, USA </b></p>
         <p id="title_left"> Machine Learning Engineer </p>
-        <p id="title_right"><i> Sep. 2018 - Now </i></p>
+        <p id="title_right"><i> Sep. 2018 - Oct. 2020 </i></p>
         <p id="title_left"> Machine Learning Engineer Intern</p>
         <p id="title_right"><i> Aug. 2018 - Sep. 2018 </i></p>
         <li> Supervised the NLP team to define problems, conduct researches, and provide solutions. </li>
