--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -56,7 +56,7 @@
           <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a> | 
           <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
           <br>
-          Mchine Learning Engineer, Learnable, Inc. <br> 
+          Senior Algorithm Engineer, Alibaba Group <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
           Graduate Student, Applied Data Science, Syracuse University 
         </center>
