--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -54,9 +54,9 @@
         <aside id="sidebar">
           <img src="/assets/images/image_01.png" width="200px"><br>
           <p>
-            <b>Ning Shi</b><br>
-            Machine Learning Engineer <br>
-            Learnable, Inc. <br>
+            <b> Ning Shi (Shining) 石宁 </b><br>
+            Senior Algorithm Engineer <br>
+            Alibaba Group <br>
             <img src="/assets/images/icon_01.png" width="15px"> STShining <br>
             <img src="/assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com <br>
             <img src="/assets/images/bar.png" width="200px"> <br>
