--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -181,20 +181,20 @@
 
         <p id="text"><b> Recurrent Inference in Text Editing </b></p>
         <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
-        <li> Findings of the Association for Computational Linguistics (ACL): Empirical Methods in Natural Language Processing (EMNLP) 2020. </li>
+        <li> Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing: Findings </li>
 
         <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p>
         <li><b>Ning Shi</b></a> </li>
-        <li> Submitted. </li>
+        <li> Submitted </li>
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
         <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, Yuheng Hu </li>
-        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019.</li>
+        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019 </li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li><b>Ning Shi</b></li>
         <li> Advisors: Farid Razzak and Thomas Christo </li>
-        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University. </li>
+        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University </li>
 
         <h1 id="section"> Services</h1>
         <hr noshade>
