--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -181,7 +181,7 @@
 
         <p id="text"><b> Recurrent Inference in Text Editing </b></p>
         <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
-        <li> Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing: Findings </li>
+        <li> Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP): Findings </li>
 
         <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p>
         <li><b>Ning Shi</b></a> </li>
@@ -196,7 +196,11 @@
         <li> Advisors: Farid Razzak and Thomas Christo </li>
         <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University </li>
 
-        <h1 id="section"> Services</h1>
+        <h1 id="section"> Talks </h1>
+        <p id="title_left"><b> Recurrent Inference in Text Editing </b>, 4th Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
+        <p id="title_right"><b> Oct. 2020 </b></p> 
+
+        <h1 id="section"> Services </h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
