--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -198,7 +198,7 @@
 
         <h1 id="section"> Talks </h1>
         <p id="title_left"><b> Recurrent Inference in Text Editing </b>, 4th Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
-        <p id="title_right"><b> Oct. 2020 </b></p> 
+        <p id="title_right"><b> Nov. 20th, 2020 </b></p> 
 
         <h1 id="section"> Services </h1>
         <hr noshade>
