Update for new work

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -179,12 +179,16 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
+        <p id="text"><b> Incorporating External POS Tagger for Punctuation Restoration </b></p>
+        <li><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, Zhouhan Lin </li>
+        <li> Submitted </li>
+
         <p id="text"><b> Recurrent Inference in Text Editing </b></p>
         <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
         <li> Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP): Findings </li>
 
         <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p>
-        <li><b>Ning Shi</b></a> </li>
+        <li><b>Ning Shi</b></li>
         <li> Submitted </li>
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
