--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -180,28 +180,28 @@
         <hr noshade>
 
         <p id="text"><b> Incorporating External POS Tagger for Punctuation Restoration </b></p>
-        <li><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, Zhouhan Lin </li>
-        <li> Submitted </li>
+        <li><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, and Zhouhan Lin </li>
+        <li> Conference of the International Speech Communication Association (INTERSPEECH), 2021. </li>
 
         <p id="text"><b> Recurrent Inference in Text Editing </b></p>
-        <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
-        <li> Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP): Findings </li>
+        <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, and Yichen Gong </li>
+        <li> Findings of Empirical Methods in Natural Language Processing (EMNLP Findings), 2020. </li>
 
         <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p>
         <li><b>Ning Shi</b></li>
         <li> Submitted </li>
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
-        <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, Yuheng Hu </li>
-        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019 </li>
+        <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, and Yuheng Hu. </li>
+        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS), 2019. </li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li><b>Ning Shi</b></li>
-        <li> Advisors: Farid Razzak and Thomas Christo </li>
-        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University </li>
+        <li> Advisors: Farid Razzak and Thomas Christo. </li>
+        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University. </li>
 
         <h1 id="section"> Talks </h1>
-        <p id="title_left"><b> Recurrent Inference in Text Editing </b>, 4th Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
+        <p id="title_left"><b> Recurrent Inference in Text Editing </b>, Fourth Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
         <p id="title_right"><b> Nov. 20th, 2020 </b></p> 
 
         <h1 id="section"> Services </h1>
