Udpate Coursework and CV

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -58,7 +58,6 @@
           <br>
           Senior Algorithm Engineer, Alibaba Group <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
-          Graduate Student, Applied Data Science, Syracuse University 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -72,7 +71,7 @@
         <p id="title_left"><b> Syracuse University </b></p>
         <p id="title_right"><b> Syracuse, USA </b></p>
         <li><p id="left"> Master of Science in Applied Data Science </p>
-        <p id="right"><i> Sep. 2018 - Now </i></p></li>
+        <p id="right"><i> Sep. 2018 - May. 2021 </i></p></li>
 
         <p id="title_left"><b> New York University </b></p>
         <p id="title_right"><b> New York, USA </b></p>
@@ -129,13 +128,31 @@
         <li> Collaborated with developers to drive product development and took responsibility in product lifecycle management. </li>
         <li> Maintained and optimized existing procedure and team training program. </li>
 
-        <h1 id="section"> Projects </h1>
+        <h1 id="section"> Research & Projects </h1>
         <hr noshade>
 
-        <p id="title_left"><b> Shining Lab </b>, Recurrent Capitalization and Punctuation Restoration for Automatic Speech Recognition </p>
-        <p id="title_right"><b> Jun. 2020 - Now </b></p>
-        <li> Collected, cleaned, and processed the LibriSpeech and IWSLT2012 ASR corpus for experiments. </li> 
-        <li> Researched on novel approaches to recurrently post-process the outputs of the ASR system. </li>
+        <p id="title_left"><b> Alibaba Group </b>, Proactive Conversational AI </p>
+        <p id="title_right"><b> Nov. 2020 - Now </b></p>
+        <li> The owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
+        <li> Directed the team to develop algorithm APIs to interactivate with message systems for two IM applications. </li>
+        <li> Applied the forefront studies in our chatbot and identified thousands of hidden illegal commodity transactions over 10+ risk points so far. </li>
+
+        <p id="title_left"><b> Alibaba Group </b>, Reinforcement Learning in Text Editing </p>
+        <p id="title_right"><b> Aug. 2021 - Now </b></p>
+        <li> Defined text editing as a solvable Markov decision process. </li>
+        <li> Investigated how to deal with text editing with the assistance of RL methods. </li>
+
+        <p id="title_left"><b> Shining Lab </b>, From SCAN to Real Data: Systematic Generalizationvia Inductive and Deductive Learning </p>
+        <p id="title_right"><b> Apr. 2021 - Now </b></p>
+        <li> Revisited systematic generalization by investigating one-shot generalization via semantic linking. </li> 
+        <li> Tested modern seq2seq models, including RNNs, CNNs, and Transformers on SCAN, with inductive and deductive learning principles. </li>
+        <li> Found that such kind of systematic generalization via semantic linking is the evidence to support vocabulary data augmentation. </li>
+
+        <p id="title_left"><b> Shining Lab </b>, Incorporating External POS Tagger for Punctuation Restoration </p>
+        <p id="title_right"><b> Jul. 2020 - Mar. 2021 </b></p>
+        <li> Proposed a  novel framework to employ an external POS tagger to provide syntactic information for better punctuation restoration. </li> 
+        <li> Examined a wide range of pre-trained LMs in a fair and comparable setting, including BERT, RoBERTa, and Funnel Transformer. </li>
+        <li> Showed that our method can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. </li>
         
         <p id="title_left"><b> Shining Lab </b>, Recurrent Inference in Text Editing </p>
         <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p>
