--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -196,6 +196,10 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
+        <p id="text"><b> Counterfactual Adversarial Learning with Representation Interpolation </b></p>
+        <li> Wei Wang, Boxin Wang, <b>Ning Shi</b>, Jinfeng Li, Bingyu Zhu, Xiangyu Liu, and Rong Zhang </li>
+        <li> Findings of Empirical Methods in Natural Language Processing (EMNLP Findings), 2021. </li>
+
         <p id="text"><b> Incorporating External POS Tagger for Punctuation Restoration </b></p>
         <li><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, and Zhouhan Lin </li>
         <li> Conference of the International Speech Communication Association (INTERSPEECH), 2021. </li>
