--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -97,6 +97,7 @@
         <p id="title_left"> Founder </p> 
         <p id="title_right"><i> Sep. 2019 - Now </i></p>
         <li> Directed the team to research on cutting edge innovation in AI. </li>
+        <li> Until now (Dec. 2021), 3 papers published at top conferences, and 3 under peer review. </li>
 
         <p id="title_left"><b> Learnable, Inc. </b></p>
         <p id="title_right"><b> Boston, USA </b></p>
@@ -131,70 +132,74 @@
         <h1 id="section"> Research & Projects </h1>
         <hr noshade>
 
-        <p id="title_left"><b> Alibaba Group </b>, Proactive Conversational AI </p>
+        <p id="title_left"><b> Alibaba Group</b>, Proactive Conversational AI </p>
         <p id="title_right"><b> Nov. 2020 - Now </b></p>
         <li> The owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
         <li> Directed the team to develop algorithm APIs to interactivate with message systems for two IM applications. </li>
         <li> Applied the forefront studies in our chatbot and identified thousands of hidden illegal commodity transactions over 10+ risk points so far. </li>
 
-        <p id="title_left"><b> Alibaba Group </b>, Reinforcement Learning in Text Editing </p>
+        <p id="title_left"><b> Alibaba Group</b>, Reinforcement Learning in Text Editing </p>
         <p id="title_right"><b> Aug. 2021 - Now </b></p>
         <li> Defined text editing as a solvable Markov decision process. </li>
         <li> Investigated how to deal with text editing with the assistance of RL methods. </li>
 
-        <p id="title_left"><b> Shining Lab </b>, From SCAN to Real Data: Systematic Generalizationvia Inductive and Deductive Learning </p>
+        <p id="title_left"><b> Shining Lab</b>, From SCAN to Real Data: Systematic Generalization via Meaningful Learning </p>
         <p id="title_right"><b> Apr. 2021 - Now </b></p>
         <li> Revisited systematic generalization by investigating one-shot generalization via semantic linking. </li> 
         <li> Tested modern seq2seq models, including RNNs, CNNs, and Transformers on SCAN, with inductive and deductive learning principles. </li>
         <li> Found that such kind of systematic generalization via semantic linking is the evidence to support vocabulary data augmentation. </li>
 
-        <p id="title_left"><b> Shining Lab </b>, Incorporating External POS Tagger for Punctuation Restoration </p>
+        <p id="title_left"><b> Shining Lab</b>, Incorporating External POS Tagger for Punctuation Restoration </p>
         <p id="title_right"><b> Jul. 2020 - Mar. 2021 </b></p>
         <li> Proposed a  novel framework to employ an external POS tagger to provide syntactic information for better punctuation restoration. </li> 
         <li> Examined a wide range of pre-trained LMs in a fair and comparable setting, including BERT, RoBERTa, and Funnel Transformer. </li>
         <li> Showed that our method can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. </li>
         
-        <p id="title_left"><b> Shining Lab </b>, Recurrent Inference in Text Editing </p>
+        <p id="title_left"><b> Shining Lab</b>, Recurrent Inference in Text Editing </p>
         <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p>
         <li> Proposed a novel method to edit text through a recurrent inference process. </li> 
         <li> Introduced a suite of three controlled synthetic benchmark tasks. </li> 
         <li> Conducted extensive experiments and showed significant gains over conventional inference methods. </li>
 
-        <p id="title_left"><b> Learnable, Inc. </b>, Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </p>
+        <p id="title_left"><b> Learnable, Inc.</b>, Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </p>
         <p id="title_right"><b> Jun, 2019 - Nov, 2019 </b></p>
         <li> Cleaned, tokenized, and managed math corpus from HTML-embeded raw data. </li> 
         <li> Applied and improved masked language modeling (e.g., BERT) for universal use of pre-trained representation. </li> 
         <li> Maintained the training environment and computing resources. </li> 
 
-        <p id="title_left"><b> Learnable, Inc. </b>, Post-Processing for Deep Learning Based Optical Character Recognition </p>
+        <p id="title_left"><b> Learnable, Inc.</b>, Post-Processing for Deep Learning Based Optical Character Recognition </p>
         <p id="title_right"><b> Apr, 2019 - Aug, 2019 </b></p>
         <li> Analyzed OCR error patterns and built a simulator to generate data automatically. </li> 
         <li> Researched on involving language understanding into a real-time OCR system. </li> 
         <li> Established a pipeline from scratch with models (e.g., GRU, LSTM, Transformer) switching. </li> 
         <li> Maintained both test and production environments, and embedded corrector into OCR system. </li> 
 
-        <p id="title_left"><b> Learnable, Inc. </b>, Knowledge Points Tagging for High School Exam Questions </p>
+        <p id="title_left"><b> Learnable, Inc.</b>, Knowledge Points Tagging for High School Exam Questions </p>
         <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
         <li> Developed SQL pipeline to manage the 14 Million Question Bank. </li> 
         <li> Explored various multi-label classification approaches and proposed hierarchical inference. </li> 
 
-        <p id="title_left"><b> New York University </b>, The Relationship of Academic Capital and Mendeley Altmetrics </p>
+        <p id="title_left"><b> New York University</b>, The Relationship of Academic Capital and Mendeley Altmetrics </p>
         <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
         <li> Quantified the academic capital of an article’s author based on Elsevier research metrics. </li> 
         <li> Examined relationships of academic capital features and Mendeley Readership. </li> 
         <li> Reported the influence of the first authors’ citations on articles’ reader count. </li>
 
-        <p id="title_left"><b> Pythagoras Investment Management LLC </b>, Pythagoras Digital Funds Trading Systems </p>
+        <p id="title_left"><b> Pythagoras Investment Management LLC</b>, Pythagoras Digital Funds Trading Systems </p>
         <p id="title_right"><b> Dec. 2017 - May. 2018 </b></p>
 
-        <p id="title_left"><b> New York University </b>, AIChallenger English-Chinese Machine Translation </p>
+        <p id="title_left"><b> New York University</b>, AIChallenger English-Chinese Machine Translation </p>
         <p id="title_right"><b> Sep. 2017 - May. 2018 </b></p> 
 
-        <p id="title_left"><b> New York University </b>, HackNYU Lung Cancer Detection Using Deep Learning </p>
+        <p id="title_left"><b> New York University</b>, HackNYU Lung Cancer Detection Using Deep Learning </p>
         <p id="title_right"><b> Mar. 2017 - Apr. 2017 </b></p> 
 
         <h1 id="section"> Publications</h1>
         <hr noshade>
+
+        <p id="text"><b> From SCAN to Real Data: Systematic Generalization via Meaningful Learning </b></p>
+        <li> <b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, Rong Zhang, Hui Xue, Xinbing Wang, Zhouhan Lin </li>
+        <li> arXiv, 2021. </li>
 
         <p id="text"><b> Counterfactual Adversarial Learning with Representation Interpolation </b></p>
         <li> Wei Wang, Boxin Wang, <b>Ning Shi</b>, Jinfeng Li, Bingyu Zhu, Xiangyu Liu, and Rong Zhang </li>
@@ -218,12 +223,13 @@
         <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University. </li>
 
         <h1 id="section"> Talks </h1>
-        <p id="title_left"><b> Recurrent Inference in Text Editing </b>, Fourth Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
+        <p id="title_left"><b> Recurrent Inference in Text Editing</b>, Fourth Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
         <p id="title_right"><b> Nov. 20th, 2020 </b></p> 
 
         <h1 id="section"> Services </h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2021 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
 
       </div>
