--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -58,6 +58,7 @@
           <br>
           Senior Algorithm Engineer, Alibaba Group <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
+          Update at Jan. 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -229,7 +230,8 @@
         <h1 id="section"> Services </h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
-        <p id="left"> Reviewer of ACL Rolling Review 2021 </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2021 - Nov. Dec. </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2022 - Jan. </p>
         <p id="left"> DataKind DataDives Volunteer </p>
 
       </div>
