--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -58,7 +58,7 @@
           <br>
           Senior Algorithm Engineer, Alibaba Group <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
-          Update at Jan. 2022 <br> 
+          Updated in Jan. 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
