--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -57,12 +57,18 @@
           <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
           <br>
           Senior Algorithm Engineer, Alibaba Group <br> 
+          Incoming Ph.D. Student, Computer Science, University of Alberta <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
-          Updated in Jan. 2022 <br> 
+          Updated on Apr. 1, 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
         <hr noshade>
+
+        <p id="title_left"><b> University of Alberta </b></p>
+        <p id="title_right"><b> Edmonton, Canada </b></p>
+        <li><p id="left"> Doctor of Philosophy in Computer Science </p>
+        <p id="right"><i> Sep. 2022 - Now </i></p></li>
 
         <p id="title_left"><b> Georgia Institute of Technology </b></p>
         <p id="title_right"><b> Atlanta, USA </b></p>
@@ -231,7 +237,9 @@
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
         <p id="left"> Reviewer of ACL Rolling Review 2021 - Nov. Dec. </p>
-        <p id="left"> Reviewer of ACL Rolling Review 2022 - Jan. </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2022 </p>
+        <p id="left"> Reviewer of ICML 2022 </p>
+        <p id="left"> Reviewer of NeurIPS 2022 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
 
       </div>
