--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -59,7 +59,7 @@
           Senior Algorithm Engineer, Alibaba Group <br> 
           Incoming Ph.D. Student, Computer Science, University of Alberta <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
-          Updated on Apr. 1, 2022 <br> 
+          Updated on Apr. 26, 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -73,7 +73,7 @@
         <p id="title_left"><b> Georgia Institute of Technology </b></p>
         <p id="title_right"><b> Atlanta, USA </b></p>
         <li><p id="left"> Master of Science in Computer Science </p>
-        <p id="right"><i> Sep. 2019 - Now </i></p></li>
+        <p id="right"><i> Sep. 2019 - May. 2022 </i></p></li>
 
         <p id="title_left"><b> Syracuse University </b></p>
         <p id="title_right"><b> Syracuse, USA </b></p>
